# components-library-fasthtml

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  showcase.py
.gitlab/: CODEOWNERS
components_library/: __init__.py
components_library/api/: __init__.py  protocol.py  types.py
components_library/api/rest/: __init__.py  client.py
components_library/api/v2/: __init__.py  client.py
components_library/components/: __init__.py
components_library/components/atoms/: __init__.py  accordion.py  alert.py  autocomplete_input.py  avatar.py  badge.py  box.py  button.py  button_link.py  card.py  checkbox.py  chip_select.py  collapsible.py  confidence_score.py  date_input.py  editable_heading.py  empty_state.py  field.py  flex.py  grid.py  heading.py  icon.py  icon_button.py  icons.py  input.py  link.py  logical_operator.py  logo.py  menu.py  modal.py  pagination.py  popover.py  progress.py  radio.py  responsive_text.py  select.py  separator.py  skeleton.py  slider.py  specific_icons.py  (+10 more)
components_library/components/molecules/: __init__.py  action_card.py  auth_form.py  breadcrumbs.py  carousel.py  character_card.py  child_entries_section.py  completion_circle.py  dashboard_nav_card.py  dashboard_stat_card.py  date_range_inputs.py  detail_row.py  details_section.py  discrete_slider.py  editable_header.py  editable_heading.py  enhanced_search_bar.py  entity_card.py  error_fallback.py  favorite_button.py  feature_item.py  file_dropzone.py  file_upload_progress.py  filter_bar.py  filter_panel.py  focal_point_picker_htmx.py  footer.py  form_card_select.py  form_modal.py  hero_banner.py  hero_card.py  htmx_file_dropzone.py  htmx_tag_manager.py  icon_card.py  image_card.py  image_montage.py  image_uploader.py  info_panel.py  item_details.py  job_status_banner.py  (+21 more)
components_library/components/organisms/: __init__.py  alphabet_browser.py  articles_search.py  data_table.py  header.py  kanban_board.py  kanban_column.py  navigation.py  notifications.py  page_header.py  relationship_board.py  timeline_view.py
components_library/design_system/: __init__.py
components_library/services/: __init__.py  concepts.py  csv_export.py  documents.py  health.py
components_library/utils/: __init__.py  component_helpers.py  htmx_helpers.py  session.py  style_generator.py
docs/: agentic_coding_guide.md  component_flexibility.md  dependency_injection_architecture.md  feature-development-guide.md
tests/: __init__.py
(+28 files in other folders)
